# verwandlung

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  makefile  readme.md  requirements.txt
.sublime/: Verwandlung.sublime-project
dep/attr/macos/: attr.h
etc/: usefull.md
etc/fbx/: zophrac-9fea6ffd67b840cb970f5b4570794709.fbx
etc/mapping/: ARKit_CC.csv  ARKit_Zophrac.csv
python/: setup.py
python/src/: __init__.py
python/src/wandel_cli/: __init__.py  cli.py
src/: wandel.cpp
src/cli/: main.cpp
src/python/: pywandel.cpp
src/python-smallfbx/: module.cpp
src/python_smallfbx/: CMakeLists.txt
src/python_smallfbx/binding/: module.cpp
src/python_smallfbx/package/: setup.py
src/python_smallfbx/package/src/: __init__.py
src/python_smallfbx/test/: __main__.py  main.py
src/python_wandel/: CMakeLists.txt
src/python_wandel/binding/: module.cpp
src/python_wandel/package/: readme.md  setup.py
src/python_wandel/test/: __init__.py  __main__.py
src/wandel/: wandel.cpp  wandel.hpp
tools/: get-platform-tag.py  python3-config
